--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,5 @@ kotlin.code.style=official
 org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M" -Dfile.encoding\=UTF-8
 android.useAndroidX=true
 org.gradle.unsafe.configuration-cache=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
